# Tameru

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  FIXPLAN.md  README.md  TODO.md  UX_PROMPT.md  UX_WEB_PROMPT.md  eval.py  pyproject.toml  railway.json  web_wireframes.html
app/: auth.py  context.py  db.py  logging_config.py  logging_redaction.py  main.py  mcp_server.py  sentry_filters.py
docs/: launch_checklist.md  zdr_request.md
evals/: README.md  categorization.yaml  chat_extraction.yaml  multi_hop.yaml
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.deployed.config.ts  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
scripts/: __init__.py  _eval_setup.py  e2e_local.sh  e2e_user.py  manual_test_setup.sh  mint_eval_jwt.py  mint_test_jwt.py  seed_eval_fixtures.py  smoke_prod.py
supabase/: MCP_OAUTH_SETUP.md  config.toml  seed.sql
tests/: conftest.py  test_429_backoff.py  test_admin_aicalls.py  test_agent_loop.py  test_aggregator.py  test_aicalllog_completeness.py  test_auth.py  test_autolog.py  test_baselines.py  test_card_regions.py  test_categorize.py  test_chart_spec.py  test_chat_prompt_directives.py  test_chat_stream.py  test_chat_turn_merchants.py  test_compose_digest.py  test_correlation_id_threading.py  test_csv_import.py  test_digest_cron.py  test_digest_timezone.py  test_entry_moment.py  test_eval_judge.py  test_i18n_tier2.py  test_logging_pii_redaction.py  test_main.py  test_mcp.py  test_me_endpoint.py  test_memory_cleanup.py  test_memory_distill.py  test_memory_distill_idempotent.py  test_memory_distill_prompt.py  (+20 more)
(+404 files in other folders)
