[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tameru"
version = "0.0.1"
description = "Spending intelligence PWA backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "supabase>=2.8",
  "pyjwt[crypto]>=2.9",
  "anthropic>=0.40",
  "google-genai>=0.3",
  "sentry-sdk[fastapi]>=2.18",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "evals*", "frontend*", "supabase*"]

[tool.pytest.ini_options]
markers = [
  "smoke: opt-in real-API tests (Gemini, Anthropic). Require live network and API keys; not run by default.",
]
# Exclude smoke tests from the default run. To run smoke tests:
#   pytest -o "addopts=" -m smoke
# (Clearing addopts lets the CLI's -m winnow through instead of AND'ing
# against the default filter below.)
addopts = "-m 'not smoke'"
